# opensdmx

./: .env.example  .gitignore  LOG.md  README.md  pyproject.toml
docs/: PRD.md  architecture.md  cache.md  cli-test-examples.md  future-ideas.md  guide-workflow.md  providers.md  release.md  specs.md  validation-statgpt.md
docs/skill/: README.md
scripts/: probe_providers.sh
skills/sdmx-explorer/: SKILL.md
skills/sdmx-explorer/references/: duckdb-setup.md  readme-template.md  visualization.md
src/istatpy/: __init__.py  base.py  cli.py  discovery.py  retrieval.py
src/opensdmx/: __init__.py  ai.py  base.py  cache_config.py  cli.py  db_cache.py  discovery.py  embed.py  portals.json  retrieval.py  utils.py
tasks/: todo.md
tests/: test_base.py  test_cache_config.py  test_cli.py  test_db_cache.py  test_discovery.py
