[project]
name = "istatpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aborruso", email = "aborruso@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "plotnine>=0.15.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
istatpy = "istatpy:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
